test/error/error.input31.zc
Expecting a primary expression, got token:+ on line 5
